--- a/src/Components/MenuList.css
+++ b/src/Components/MenuList.css
@@ -2,7 +2,7 @@
 
 } */
 
-img{
+/* img{
     height: 70px;
     width: 70px;
     display: flex;
@@ -13,4 +13,18 @@ img{
     text-decoration: none;
     color: black;
     
+} */
+
+
+.title:hover {
+    font-style: bold;
+    color: rgb(81, 81, 179);
+}
+
+.card-img-top {
+
+    height: 200px;
+
+    object-fit: cover;
+
 }
